# Acroba-project

./: .setup_assistant  CMakeLists.txt  README.md  Untitled Document 1  Untitled.xacro  json_test.py  move_forward.py  package.xml  sigma_cell.xacro  sigma_test.xacro  skill_test.py  skill_test1.py  test3.py  untitled.urdf  ur3e_gripper.launch
action/: ActionTemplate.action  Move.action  Move2.action  PatrolSkill.action  rotate.action
config/: fake_controllers.yaml  gazebo_sigma_cell.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  sigma_cell.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml  turtle2.yaml
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/acroba_workshop_sigma/: FollowAction.h  FollowActionFeedback.h  FollowActionGoal.h  FollowActionResult.h  FollowFeedback.h  FollowGoal.h  FollowResult.h  LeadAction.h  LeadActionFeedback.h  LeadActionGoal.h  LeadActionResult.h  LeadFeedback.h  LeadGoal.h  LeadResult.h  Move2Action.h  Move2ActionFeedback.h  Move2ActionGoal.h  Move2ActionResult.h  Move2Feedback.h  Move2Goal.h  Move2Result.h  MoveAction.h  MoveActionFeedback.h  MoveActionGoal.h  MoveActionResult.h  MoveFeedback.h  MoveGoal.h  MoveResult.h  PatrolAction.h  PatrolActionFeedback.h  PatrolActionGoal.h  PatrolActionResult.h  PatrolFeedback.h  PatrolGoal.h  PatrolResult.h  PatrolSkillAction.h  PatrolSkillActionFeedback.h  PatrolSkillActionGoal.h  PatrolSkillActionResult.h  PatrolSkillFeedback.h  (+9 more)
devel/lib/acroba_workshop_sigma/: move_forward.py  pr_follow.py  pr_move.py  sk_follower.py  sk_leader.py  skill_test.py  test_follow.py  test_patrol.py
devel/lib/pkgconfig/: acroba_workshop_sigma.pc
devel/share/acroba_workshop_sigma/cmake/: acroba_workshop_sigma-msg-paths.cmake  (+1 more)
docs/: presentation.odp
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  start_task_1.sh  start_turtlesim.launch  stomp_planning_pipeline.launch.xml
scripts/: pr_move.py  pr_rotate.py  sk_test.py  skpatrol.py  test_move.py  test_rotate.py  testfollow.py
scripts/primitives/: pr_template.py  pr_test.py
scripts/skills/: sk_follower.py  sk_template.py
scripts/test/: test_rotate.py  test_template.py  testfile.py
src/: CMakeLists.txt  template_action.cpp
support/: CMakeLists.txt  package.xml
support/meshes/: stator.stl  support_robot.stl
test/: .setup_assistant  CMakeLists.txt  package.xml
test/config/: fake_controllers.yaml  gazebo_sigma_cell.urdf  ompl_planning.yaml  ros_controllers.yaml  sigma_cell.srdf  simple_moveit_controllers.yaml
test/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
universal_robot/: .setup_assistant  CMakeLists.txt  bonding.json  json_test.py  marker_publisher.py  moveit_test.py  package.xml  robot_move.py  sigmacell.launch  sigmacell_bastien.launch  winding.json  winding_view.py
universal_robot/config/: fake_controllers.yaml  gazebo_sigma_cell.urdf  ompl_planning.yaml  ros_controllers.yaml  sigma_cell.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
universal_robot/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
(+194 files in other folders)
